# peter

./: .Rhistory  .gitignore  .gitmodules  requirements.txt  test_r.R
.devcontainer/: Dockerfile  README-R-kernel.md  devcontainer.json  start-novnc.sh  supervisord-novnc.conf
DSAC7606/DASC7606A-B-main/: .gitignore  01_data_collection.ipynb  02_data_augmentation.ipynb  03_model_building.ipynb  04_model_training.ipynb  05_model_evaluation.ipynb  README.md  main.py  pyproject.toml  requirements.txt
DSAC7606/DASC7606A-B-main/scripts/: data_augmentation.py  data_download.py  evaluation_metrics.py  model_architectures.py  train_utils.py
FITE7410/: FITE7410_Assgn_1.ipynb  FITE7410_Assgn_1_v0.2.ipynb  FITE7410_Assgn_1_v0.3.R  FITE7410_Assgn_1_v0.3.ipynb  FITE7410_Assignment_1_2025.R  PCA.R  convert.ipynb  explore_data.R  first_few_rows.csv  handle_missing_data_(R).ipynb  handle_outlier.R  handle_outlier.ipynb  handlle_missing_data.R  sample.R  test.R  visualize_data.R
FITE7410/Exam/: MSC_WKSHT1_Python_Workshop.ipynb  P1.py  P2.py  P3.py
FITE7410/Lecture/: Thumbs.db
Reference/: StockPrice.ipynb  Synology.ipynb
notebooks/: image-classifier.ipynb  matplotlib.ipynb  population.ipynb
